# airflow-v2-to-v3

./: .gitignore  LICENSE  Makefile  README.md  migration_rules.json  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml
scripts/: bump_version.py
src/airflow_v2_to_v3/: __init__.py  cli.py  differ.py  rules.py  transformer.py  validator.py
tests/: test_transformer.py  test_validator.py
tests/fixtures/: sample_dag_v2.py
